Add new recipe to recipes array and display among default recipes

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
               type="checkbox"
               class="modal recipe-haveCooked inputbox"
               name="recipe-haveCooked"
+              checked="checked"
           /></label>
           <button class="save-recipe-button">Save Recipe</button>
         </div>
