--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@
             <a
               href="https://www.simplyrecipes.com/recipes/tomato_soup/"
               target="_blank"
-              >Simply Recipes
+              >Link to Recipe
             </a>
           </div>
-          <button class="cooked-toggle">Cooked</button>
+          <button class="cooked-toggle">Cooked 🍳</button>
           <button class="delete-button">
             <i class="far fa-trash-alt"></i>
           </button>
@@ -123,7 +123,7 @@
             <a
               href="https://www.simplyrecipes.com/recipes/easy_chicken_mac_and_cheese/"
               target="_blank"
-              >Simply Recipes
+              >Link to Recipe
             </a>
           </div>
           <button class="cooked-toggle">Not Cooked</button>
@@ -143,7 +143,7 @@
             <a
               href="https://www.simplyrecipes.com/recipes/dads_greek_salad/"
               target="_blank"
-              >Simply Recipes
+              >Link to Recipe
             </a>
           </div>
           <button class="cooked-toggle">Not Cooked</button>
