--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       rel="stylesheet"
       href="./node_modules/@fortawesome/fontawesome-free/css/all.css"
     />
+    <link rel="icon" href="images/favicon.ico" />
   </head>
   <body>
     <script
