--- a/index.html
+++ b/index.html
@@ -16,9 +16,15 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="index.css" />
-    <link
+    <!-- <link
       rel="stylesheet"
       href="./node_modules/@fortawesome/fontawesome-free/css/all.css"
+    /> -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
+      integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w=="
+      crossorigin="anonymous"
     />
     <link rel="icon" href="images/favicon.ico" />
   </head>
