--- a/index.html
+++ b/index.html
@@ -16,10 +16,6 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="index.css" />
-    <!-- <link
-      rel="stylesheet"
-      href="./node_modules/@fortawesome/fontawesome-free/css/all.css"
-    /> -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
@@ -29,10 +25,7 @@
     <link rel="icon" href="images/favicon.ico" />
   </head>
   <body>
-    <script
-      type="module"
-      src="node_modules/sweetalert/dist/sweetalert.min.js"
-    ></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="index.js" async defer></script>
     <div class="wrapper">
       <!-- NAVBAR -->
